# Landslide_monitor

./: BUILD.gn  README.md  landslide_monitor_main.c  test_iot_mature.c
embedded/: BUILD.gn  README.md  landslide_monitor_main.c
embedded/landslide_monitor/: BUILD.gn  COMPILATION_FIX.md  DETECTION_INTERVALS_OPTIMIZATION.md  GPS地质形变监测说明.md  GPS数据上传修复说明.md  GPS模块集成文档.md  NETWORK_OPTIMIZATION.md  README.md  README_DataCache.md  SYSTEM_IMPROVEMENTS.md  UNIFIED_CACHE_SYSTEM.md  WIFI_RECONNECT_FIX.md  landslide_monitor_main.c  成熟版IoT配置说明.md
embedded/landslide_monitor/include/: iot_cloud.h  landslide_monitor.h  lcd_display.h  lcd_font.h  output_devices.h
embedded/landslide_monitor/src/: iot_cloud.c  lcd_display.c  output_devices.c
embedded/src/: output_devices.c
embedded/物联网设计竞赛/landslide_monitor/: BUILD.gn  landslide_monitor_main.c
include/: data_storage.h  iot_cloud.h  landslide_monitor.h  lcd_font.h  output_devices.h
landslide_monitor/: FEATURE_OPTIMIZATION.md  compile_test.md
src/: data_storage.c  iot_cloud.c  lcd_display.c  output_devices.c
web/: README.md  滑坡监测系统产品文档.md
web/backend/: README.md  package.json
web/backend/iot-service/: .env  .env.template  FILE_STRUCTURE.md  README.md  anomaly-config.js  check-service-status.js  data-processor.js  device-management-deformation-service.js  device-mapper.js  device-registry.js  get-product-id.js  get-project-id.js  huawei-iot-service.js  iot-server.js  package-lock.json  package.json  quick-deploy.sh  simple-server.js  start-server.js  start.sh  test-anomaly.js  test-api-versions.js  test-api.js  test-auth.js  test-command.js  test-commands.js  test-data-insert.js  test-device-registry.js  test-fixed-motor.js  test-global-endpoint.js  (+9 more)
web/frontend/: Dockerfile  README.md  docker-compose.yml  ecosystem.config.js  nginx.conf  openharmony.code-workspace  package-lock.json  package.json  报错.txt
(+35 files in other folders)
